<resources>
    <string name="app_name">惠荣ERP-OA-SaaS办公系统</string>
    <string name="action_settings">Settings</string>
    <string name="network_invalid">网络不给力，请检查网络连接！</string>
    <string name="please_input_account">请输入公司账号</string>
    <string name="please_input_uername">请输入登录账号</string>
    <string name="please_input_ps">请输入密码</string>
    <string name="login">登录</string>
    <string name="LoginActivity_companyNum">请输入公司账号！</string>
    <string name="LoginActivity_employeeNum">请输入登录账号！</string>
    <string name="LoginActivity_psd">请输入密码！</string>
    <string name="txt_message">消息</string>
    <string name="txt_app">应用</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="person_info">个人信息</string>
    <string name="person_changePSD">修改密码</string>
    <string name="person_newsNotify">新消息通知</string>
    <string name="person_feedback">意见反馈</string>
    <string name="person_feedback_hint">您的宝贵意见是我们改进的方向</string>
    <string name="person_quit">退出</string>
    <string name="person_info_name">姓名</string>
    <string name="person_info_phoneNum">电话</string>
    <string name="person_info_co">公司</string>
    <string name="person_info_number">工号</string>
    <string name="person_info_department">部门</string>
    <string name="person_info_work">职位</string>
    <string name="person_info_timeIn">入职时间</string>
    <string name="person_psd_oldpsd">原密码</string>
    <string name="person_psd_oldpsd_error">输入原密码错误</string>
    <string name="person_psd_oldpsd_in">请输入旧密码！</string>
    <string name="person_psd_newpsd">新密码</string>
    <string name="person_psd_commint">确认修改</string>
    <string name="person_psd_newpsd_d">确认密码</string>
    <string name="person_psd_newpsd_in">请输入新密码！</string>
    <string name="person_psd_newpsd_errorin">两次输入的新密码不一样！</string>
    <string name="person_psd_requestForPsd">密码由6-20位英文字母、数字或"_"组成</string>
    <string name="person_psd_requestForPsd_error">密码不可以是 英文字母、数字 或 下划线 以外的字符！</string>
    <string name="person_psd_error_lenght">请检查密码长度，6-20位密码！</string>
    <string name="msg_msgTitle">通知</string>
    <string name="msg_noticeTitle">公告</string>
    <string name="msg_undoTitle">未办事项</string>
    <string name="msg_mission">待完成任务</string>
    <string name="msg_workplan">工作计划</string>
    <string name="msg_copy">抄送给我</string>
    <string name="msg_schedule">日程</string>
    <string name="txt_contract">通讯录</string>
    <string name="context_contract_hint">请输入关键字</string>
    <string name="contacts_dept">部门</string>
    <string name="epl_phone">手机号</string>
    <string name="epl_email">邮箱</string>
    <string name="epl_dept">部门</string>
    <string name="epl_enterTime">入职</string>
    <string name="attendance">外出考勤</string>
    <string name="CheckRecordOfAttend">查看考勤记录</string>
    <string name="app_perfermanceManger">业绩管理</string>
    <string name="app_procueRecord">采购领用</string>
    <string name="mg_performance01">业绩评定</string>
    <string name="mg_performance02">绩效成绩</string>
    <string name="mg_procuerecord01">采购记录</string>
    <string name="mg_procuerecord02">领用记录</string>
    <string name="app_notice">公告</string>
    <string name="app_notification">通知</string>
    <string name="workplan_add">添加计划</string>
    <string name="workplan_title_send">发出计划详情</string>
    <string name="workplan_title_rec">收到计划详情</string>
    <string name="sendPerson">发送人：</string>
    <string name="ReceivePerson">接收人：</string>
    <string name="targetAdvance">计划进度：</string>
    <string name="targetAdvance_hint">请输入计划进度</string>
    <string name="completeTime">完成时间：</string>
    <string name="completeTime_hint">请输入完成时间</string>
    <string name="workplan_title">标题：</string>
    <string name="workplan_title_hint">请输入标题</string>
    <string name="receiver">选择接受者</string>
    <string name="planContent">计划内容</string>
    <string name="planContent_hint">请输入计划内容</string>
    <string name="msn_title">任务主题</string>
    <string name="msn_title_add">添加任务</string>
    <string name="msn_title_hint">请输入任务主题</string>
    <string name="msn_content">任务内容</string>
    <string name="msn_content_hint">请输入任务内容</string>
    <string name="msn_type">任务类型</string>
    <string name="msn_place">任务地点</string>
    <string name="msn_place_hint">请输入任务地点</string>
    <string name="msn_maintainMan">维修维护人</string>
    <string name="msn_repairsMan">报修人</string>
    <string name="msn_repairsMan_hint">请输入报修人</string>
    <string name="msn_repairWay">联系方式</string>
    <string name="msn_repairWay_hint">报修人联系方式</string>
    <string name="msn_completeTime">完成时间</string>
    <string name="msn_completeTime2">实际完成时间</string>
    <string name="msn_remark">完成说明</string>
    <string name="msn_complete">完成任务</string>
    <string name="btn_complete">完成</string>
    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>
    <string name="mapAttendance">地图签到</string>
    <string name="mapAttendance_recordTitle">考勤记录</string>
    <string name="mapAttendance_today">本日</string>
    <string name="mapAttendance_weekend">本周</string>
    <string name="mapAttendance_month">本月</string>
    <string name="forAttend">签到</string>
    <string name="forAttend_detail">美好的一天开始了，快来考勤吧！</string>
    <string name="financial">财务</string>
    <string name="schedule_type">日程类型</string>
    <string name="schedule_type_hint">请选择日程类型</string>
    <string name="schedule_times">提醒次数</string>
    <string name="schedule_times_hint">请选择提醒次数</string>
    <string name="schedule_time">提醒时间</string>
    <string name="schedule_time_hint">请选择提醒时间</string>
    <string name="schedule_content_hint">请输入你的日程</string>
    <string name="schedule_save">保存</string>
    <string name="examination">审批</string>
    <string name="examination_yes">已审批</string>
    <string name="examination_no">未审批</string>
    <string name="examination_going">审批中</string>
    <string name="examination_refulse">驳回</string>
    <string name="refulse_sure">确认驳回</string>
    <string name="hint_examination_refulse">请输入意见</string>
    <string name="examination_commit">批准</string>
    <string name="examination_name">姓名:</string>
    <string name="examination_content">审批意见:</string>
    <string name="approve_sure_all">终审</string>
    <string name="approve_sure">同意</string>
    <string name="examination_transfer">转交</string>
    <string name="examination_copyto">抄送</string>
    <string name="examination_copyto_from">抄送人</string>
    <string name="examination_requester">审批人</string>
    <string name="examination_requester_sure">确定</string>
    <string name="examination_copyto_time">抄送时间</string>
    <string name="examination_copyto_SonOfCO">公司</string>
    <string name="examination_copyto_dept">部门</string>
    <string name="jobs">招聘</string>
    <string name="jobsleave">离职</string>
    <string name="bookticket">订票</string>
    <string name="training">培训</string>
    <string name="forLeave">请假</string>
    <string name="beaway">出差</string>
    <string name="overtime">加班</string>
    <string name="forRest">调休</string>
    <string name="borrow">借阅</string>
    <string name="signet">印章</string>
    <string name="salaryadjust">薪资调整</string>
    <string name="carused">车辆使用</string>
    <string name="vehicleMaintenance">车辆维保</string>
    <string name="loanReimbursement">费用申请</string>
    <string name="returnCar">交车</string>
    <string name="my_application">我的申请</string>
    <string name="my_approval">我的审批</string>
    <string name="myApplication">我的申请</string>
    <string name="MyApproval">我的审批</string>
    <string name="MyCopyto">抄送给我</string>
    <string name="state">审批状况：</string>
    <string name="state_result">审批结果：</string>
    <string name="approval_person">申请人</string>
    <string name="approval_dept">所属部门</string>
    <string name="approval_co">所属公司</string>
    <string name="approval_approvalTime">申请时间</string>
    <string name="approval_success">申请提交成功！</string>
    <string name="remark_all_apl">备注</string>
    <string name="hint_remark_all_apl">请输入备注信息</string>
    <string name="leave">请假申请</string>
    <string name="leave_d">请假详情</string>
    <string name="leaveTimeStart">开始时间</string>
    <string name="leaveTimeEnd">结束时间</string>
    <string name="leaveTimeLong">请假时长</string>
    <string name="hint_leaveTimeLong">请输入请假时长</string>
    <string name="leaveApplicationTitle">请假标题</string>
    <string name="hint_ApplicationTitle">请输入请假标题</string>
    <string name="leaveReason">请假原因</string>
    <string name="hint_leaveReason">请输入请假原因</string>
    <string name="picture">图片</string>
    <string name="addPicture">添加图片</string>
    <string name="beaway_title_d">出差详情</string>
    <string name="beaway_title_apl">出差申请</string>
    <string name="beaway_type">交通工具</string>
    <string name="beaway_startTime">出发时间</string>
    <string name="beaway_endTime">返回时间</string>
    <string name="beaway_place">出差地点</string>
    <string name="beaway_place_hint">请输入出差地点</string>
    <string name="beaway_reason">出差事由</string>
    <string name="beaway_reason_hint">请输入出差事由</string>
    <string name="beaway_remark">备注</string>
    <string name="beaway_remark_hint">请输入备注</string>
    <string name="carUsed">用车申请</string>
    <string name="carUsed_d">用车详情</string>
    <string name="carUser">驾驶人</string>
    <string name="hint_carUser">请输入驾驶人</string>
    <string name="carUsedStart">用车时间</string>
    <string name="carUsedEnd">归还时间</string>
    <string name="carUsedDestination">目的地</string>
    <string name="hint_carUsedDestination">请输入目的地</string>
    <string name="carUsedReason">用车原因</string>
    <string name="hint_carUsedReason">请输入用车说明</string>
    <string name="carUsedpurpose">用车原因</string>
    <string name="hint_carUsedpurpose">请输入用车原因</string>
    <string name="carUsed_remark">用车说明</string>
    <string name="carUsed_remark_hint">请输入用车说明</string>
    <string name="vehicleMainennance">车辆维保申请</string>
    <string name="vehicleMainennance_d">车辆维保详情</string>
    <string name="vehicleMainennanceType">维保类型</string>
    <string name="vehicleMainennanceStatus">车辆状态</string>
    <string name="vehicleMainennanceTimeStart">维保时间</string>
    <string name="vehicleMainennanceTimeEnd">维保完成时间</string>
    <string name="vehicleMainennanceNumber">车牌号</string>
    <string name="hint_vehicleMainennanceNumber">请输入车牌号</string>
    <string name="vehicleMainennancedriver">驾驶人</string>
    <string name="hint_vehicleMainennancedriver">请输入驾驶人</string>
    <string name="vehicleMainennanceContainer">维保项目</string>
    <string name="hint_vehicleMainennanceContainer">请输入维保项目</string>
    <string name="vehicleMainennanceMiles">行驶公里</string>
    <string name="hint_vehicleMainennanceMiles">请输入行驶公里</string>
    <string name="vehicleMainennanceAddress">维保地点</string>
    <string name="hint_vehicleMainennanceAddress">请输入维保地点</string>
    <string name="vehicleMainennanceMoney">预计金额</string>
    <string name="hint_vehicleMainennanceMoney">请输入预计金额（/元）</string>
    <string name="vehicleMainennanceReason">维保说明</string>
    <string name="hint_vehicleMainennanceReason">请输入维保说明</string>
    <string name="workOverTime">加班申请</string>
    <string name="workOverTime_d">加班详情</string>
    <string name="workOverTimeStart">加班开始</string>
    <string name="workOverTimeEnd">加班结束</string>
    <string name="workOverTimeLong">加班时长</string>
    <string name="workOverTimeReason">加班说明</string>
    <string name="hint_workOverTimeReason">请输入加班说明</string>
    <string name="tv_OverEmployee">加班人员</string>
    <string name="hint_workOverTimeOverEmployee">请输入加班人员</string>
    <string name="financial_title">财务申请</string>
    <string name="financial_loan">借款申请</string>
    <string name="financial_reimburse">报销申请</string>
    <string name="financial_pay">付款申请</string>
    <string name="financial_fee">费用申请</string>
    <string name="financial_fee_remark">请输入费用申请备注</string>
    <string name="financial_start">开始申请</string>
    <string name="financial_loan_apl">借款</string>
    <string name="financial_pay_apl">付款</string>
    <string name="financial_fee_apl">费用申请</string>
    <string name="hint_choose">请选择</string>
</resources>