<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/snow"
              android:orientation="vertical">

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar_common_itt"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_examination">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_ApplicationTitle"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/msn_title"
                    android:textColor="@color/cl_text_common"/>

                <EditText
                    android:id="@+id/et_missionTitle"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:background="@drawable/et_white_stroke"
                    android:gravity="center_vertical"
                    android:hint="@string/msn_title_hint"
                    android:maxLength="30"
                    android:textColorHint="@color/cl_hint_common"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/msn_content"
                    android:textColor="@color/cl_text_common"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_missionContent"
                        style="@style/BlackText.standard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/et_white_stroke"
                        android:gravity="top|left"
                        android:hint="@string/msn_content_hint"
                        android:maxLength="1000"
                        android:padding="10dp"
                        android:textColorHint="@color/cl_hint_common"
                        />
                </ScrollView>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:id="@+id/layout_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/msn_type"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.66"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_choose"
                    android:paddingRight="10dp"
                    android:textColor="@color/cl_text_common"
                    android:textColorHint="@color/cl_hint_common"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@mipmap/et_forword"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/msn_place"
                    android:textColor="@color/cl_text_common"/>

                <EditText
                    android:id="@+id/et_place"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:background="@drawable/et_white_stroke"
                    android:gravity="center_vertical"
                    android:hint="@string/msn_place_hint"
                    android:textColorHint="@color/cl_hint_common"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:id="@+id/layout_maintanMan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/msn_maintainMan"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_Requester"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.66"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_choose"
                    android:paddingRight="10dp"
                    android:textColor="@color/cl_text_common"
                    android:textColorHint="@color/cl_hint_common"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@mipmap/et_forword"/>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/msn_repairsMan"
                    android:textColor="@color/cl_text_common"/>

                <EditText
                    android:id="@+id/et_repairman"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:background="@drawable/et_white_stroke"
                    android:gravity="center_vertical"
                    android:hint="@string/msn_repairsMan_hint"
                    android:textColorHint="@color/cl_hint_common"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/msn_repairWay"
                    android:textColor="@color/cl_text_common"/>

                <EditText
                    android:id="@+id/et_repairWay"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.72"
                    android:background="@drawable/et_white_stroke"
                    android:gravity="center_vertical"
                    android:hint="@string/msn_repairWay_hint"
                    android:textColorHint="@color/cl_hint_common"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

            <LinearLayout
                android:id="@+id/layout_completeTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_topbar_height"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:gravity="center_vertical"
                    android:text="@string/msn_completeTime"
                    android:textColor="@color/cl_text_common"/>

                <TextView
                    android:id="@+id/tv_completeTime"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.66"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_choose"
                    android:paddingRight="10dp"
                    android:textColor="@color/cl_text_common"
                    android:textColorHint="@color/cl_hint_common"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@mipmap/et_forword"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.28"
                    android:text="@string/remark_all_apl"
                    android:textColor="@color/cl_text_common"/>

                <EditText
                    android:id="@+id/et_remark"
                    style="@style/BlackText.standard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.72"
                    android:background="@drawable/et_white_stroke"
                    android:gravity="top|left"
                    android:hint="@string/beaway_remark_hint"
                    android:maxLength="300"
                    android:paddingTop="10dp"
                    android:textColorHint="@color/cl_hint_common"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/common_bg_examination_line"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginTop="10dp"
                android:background="@color/common_bg_examination_line"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>